part one midterm
things to change upcoming

--- a/week6midterm/page2.html
+++ b/week6midterm/page2.html
@@ -1,120 +1,154 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-    <title>Poptop</title>
-  </head>
-  <body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-      
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav nav-tabs mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page2.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page3.html">Products</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page4.html">Team</a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-</header>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-<main>
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
+  <title>Poptop</title>
+</head>
+
+<body>
+
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav nav-tabs mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Team</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
-          <h1 class="display-4">Welcome to Poptop Products</h1>
-          <p class="lead">Let's make it rain.</p>
+      <div class="container">
+        <h1 class="display-4">Welcome to Poptop Products</h1>
+        <p class="lead">Let's make it rain. Offering you the best service at half the price.</p>
+      </div>
+    </div>
+    <section class="container">
+      <!-- START THE FEATURETTES -->
+
+      <hr class="featurette-divider my-5">
+
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">Bandai S.H.Figuarts: Marvel Avengers: Endgame Final Battle Edition Iron Man
+            MK-85 <span class="text-muted">Avenge the revenge.
+            </span></h2>
+          <p class="lead">As seen in final battle of the epic Avengers: Endgame, Iron Man joins the S.H.Figuarts line.
+            Tony Stark facial parts let you re-create dramatic moments with other characters. The accurately detailed
+            and highly poseable figure includes an optional Tony Stark head, four pairs of optional hands, energy blade
+            part, repulsor effects, nano lightning refocuser, lightning refocuser effect parts, nano shield part.</p>
+        </div>
+        <div class="col-md-5 text-center">
+          <picture>
+
+            <source srcset="avenger600.jpg" media="(min-width: 960px)">
+            <source srcset="avenger400.jpg" media="(min-width: 768px)">
+            <img src="avenger.jpg" alt="avenger" class="img-fluid">
+          </picture>
         </div>
       </div>
-      <section class="container">
-        <!-- START THE FEATURETTES -->
 
-        <hr class="featurette-divider my-5">
+      <hr class="featurette-divider my-5">
 
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading"> <span
-                        class="text-muted">Explore
-                        </span></h2>
-                <p class="lead"></p>
-            </div>
-            <div class="col-md-5 text-center">
-                <picture>
+      <div class="row featurette">
+        <div class="col-md-7 order-md-2">
+          <h2 class="featurette-heading">Hasbro Star Wars The Black Series: The Mandalorian The Child <span
+              class="text-muted">Small but wise.
+            </span></h2>
+          <p class="lead">From Star Wars The Black Series: The Child 1.2-inch collectible action figure based on the
+            so-cute-it-hurts character from the Disney Plus hit series The Mandalorian! You know, the one that’s all
+            over the Internet.
 
-                    <source srcset="avenger.jpg" media="(min-width: 960px)">
-                    <source srcset="avenger.jpg" media="(min-width: 768px)">
-                    <img src="avenger.jpg" alt="" class="img-fluid">
-                </picture>
-            </div>
+            He may look like a “Baby Yoda,” but he’s actually called The Child, and he is the most adorable new
+            character from here to the Outer Rim! Now fans can add the pint-sized galactic sensation to their Star Wars
+            The Black Series collections! Kids and collectors can imagine the cutest coos, gurgles, and gabbles the
+            outer reaches have ever known with this figure from Star Wars The Black Series.
+
+            The Black Series 1.2-inch figure is styled to look like The Child from The Mandalorian live-action TV
+            series, with premium detail and multiple points of articulation.</p>
         </div>
+        <div class="col-md-5 order-md-1 text-center">
+          <picture>
 
-        <hr class="featurette-divider my-5">
-
-        <div class="row featurette">
-            <div class="col-md-7 order-md-2">
-                <h2 class="featurette-heading"> <span class="text-muted">It's all good.
-                        </span></h2>
-                <p class="lead">.</p>
-            </div>
-            <div class="col-md-5 order-md-1 text-center">
-                <picture>
-
-                    <source srcset="yoda.jpg" media="(min-width: 960px)">
-                    <source srcset="yoda.jpg" media="(min-width: 768px)">
-                    <img src="yoda.jpg" alt="" class="img-fluid">
-                </picture>
-            </div>
+            <source srcset="yoda600.jpg" media="(min-width: 960px)">
+            <source srcset="yoda400.jpg" media="(min-width: 768px)">
+            <img src="yoda.jpg" alt="yoda" class="img-fluid">
+          </picture>
         </div>
+      </div>
 
-        <hr class="featurette-divider my-5">
+      <hr class="featurette-divider my-5">
 
-        <div class="row featurette">
-            <div class="col-md-7">
-                <h2 class="featurette-heading">Visit us real soon. <span class="text-muted">Or Online.</span></h2>
-                <p class="lead">E</p>
-            </div>
-            <div class="col-md-5 text-center">
-                <picture>
-
-                    <source srcset="brucelee.jpg" media="(min-width: 960px)">
-                    <source srcset="brucelee.jpg" media="(min-width: 768px)">
-                    <img src="brucelee.jpg" alt="" class="img-fluid">
-                </picture>
-            </div>
+      <div class="row featurette">
+        <div class="col-md-7">
+          <h2 class="featurette-heading">FiGPiN Bruce Lee<span class="text-muted">He will nunchuck you.</span></h2>
+          <p class="lead">A uniquely designed and character-specific background card finishes the look.
+            Sized approximately 3" tall (76.2mm) 3/32" thick (2.0mm)All FiGPiNs include a laser engraved, alphanumeric
+            serial number on the back, making every single one uniquely yours.</p>
         </div>
+        <div class="col-md-5 text-center">
+          <picture>
 
-        <hr class="featurette-divider my-5">
+            <source srcset="brucelee600.jpg" media="(min-width: 960px)">
+            <source srcset="brucelee400.jpg" media="(min-width: 768px)">
+            <img src="brucelee.jpg" alt="bruce lee" class="img-fluid">
+          </picture>
+        </div>
+      </div>
 
-        <!-- /END THE FEATURETTES -->
-</main>
-<footer>
+      <hr class="featurette-divider my-5">
 
-</footer>
+      <!-- /END THE FEATURETTES -->
+  </main>
+  <footer>
+    <footer class="social">
+      <i class="fab fa-facebook-square fa-2x"></i>
+      <i class="fab fa-instagram-square fa-2x"></i>
+      <i class="fab fa-twitter fa-2x"></i>
+    </footer>
+
+  </footer>
   <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="script.js"></script>
-<script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
-  </body>
-  </html>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+  <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
+</body>
+
+</html>
