--- a/week6midterm/page3.html
+++ b/week6midterm/page3.html
@@ -1,119 +1,227 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-    <title>Poptop</title>
-  </head>
-  <body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav nav-tabs mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page2.html">About</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page3.html">Products<span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="page4.html">Team</a>
-        </li>
-      </ul>
-    </div>
-      </nav>
-</header>
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
+  <title>Poptop</title>
+</head>
 
-<main>
+<body>
+
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav nav-tabs mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Products<span class="sr-only">(current)</span></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Team</a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+
+  <main>
+
     <div class="alert alert-warning" role="alert">
-        Due to Covid-19, shipping will be delayed by minimum of 2 weeks. Thanks for your patience.
+      Due to Covid-19, shipping will be delayed by minimum of 2 weeks. Thanks for your patience.
+    </div>
+
+    <h3 class="welcome">Collectibles</h3>
+    <div class="container">
+      <div class="row row-cols-1 row-cols-md-3">
+
+        <div class="col mb-4">
+          <div class="card">
+            <img src="avenger.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Avenger Assault <em>$92.00</em></h5>
+              <p class="card-text">Product Description<div></div>
+                As seen in final battle of the epic Avengers: Endgame, Iron Man joins the S.H.Figuarts line. Tony Stark
+                facial parts let you re-create dramatic moments with other characters. The accurately detailed and
+                highly poseable figure includes an optional Tony Stark head, four pairs of optional hands, energy blade
+                part, repulsor effects, nano lightning refocuser, lightning refocuser effect parts, nano shield part.
+                <div></div>
+                Product Features<div></div>
+                6 inches (15.24cm)<div></div>
+                Made of plastic<div></div>
+                From Avengers: Endgame<div></div>
+                Final Battle Edition<div></div>
+                Highly articulated<div></div>
+                Box Contents<div></div>
+                Iron Man figure<div></div>
+                Alternate head<div></div>
+                4 Pairs of hands<div></div>
+                Energy blade<div></div>
+                Repulsor effects<div></div>
+                Nano lightning refocuser<div></div>
+                Lightning refocuser effect parts<div></div>
+                Nano shield part
+
+
+              </p>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="col mb-4">
+          <div class="card">
+            <img src="sulley.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Sulley Silly <em>$30.00</em></h5>
+              <p class="card-text">Funko PoP!<div>
+
+                </div>Disney #766 <div></div>
+
+                Disney Remix<div></div>
+
+                Sulley 10"<div></div>
+
+                Disney Collectibles<div></div>
+
+                *Ships with free PoP! protector.*</p>
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-4">
+          <div class="card">
+            <img src="tmnt-soda.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Leonardo Turtle <em>$12.00</em></h5>
+              <p class="card-text">Funko Vinyl Soda <div></div>
+
+                TMNT<div></div>
+
+                Leonardo<div></div>
+
+                Possibility of Chase Variant* <div></div>
+
+                *Chase variants shipped at random. No guarantee of receiving chase with purchase. All sales final; no
+                returns or exchanges.<div></div>
+
+                TMNT Collectibles<div></div>
+
+                Limited Edition: 12500 PCS </p>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col mb-4">
+          <div class="card">
+            <img src="yoda.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Yoda Yoga <em>$12.00</em></h5>
+              <p class="card-text">The Black Series 1.2-inch figure is styled to look like The Child from The
+                Mandalorian live-action TV series, with premium detail and multiple points of articulation.
+                <div></div>
+                Product Features <div></div>
+                1.20 inches (3.04cm)<div></div>
+                Made of plastic<div></div>
+                Authentically styled after the fan-favorite character from the Disney Plus series The Mandalorian<div>
+                </div>
+                Multiple points of articulation <div></div>
+                Collector-grade quality with premium details<div></div>
+                Expand and enhance Star Wars collections<div></div>
+                Box Contents<div></div>
+                The Child<div></div>
+                Bowl<div></div>
+                Controller knob<div></div>
+                Alien frog</p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="brucelee.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Bruce F'in Lee <em> $15.00</em></h5>
+              <p class="card-text">FiGPiN Number: 371<div></div>
+                FiGPiN UPC: ﻿810021533797 <div></div>
+                Cast zinc alloy inlaid with hard synthetic color enamel finished with an electroplated nickel coating.
+                Stands up on a patented FiGPiN soft rubber backer.
+                Encased in a museum-quality, clear poly-carbonate display box with a black ABS plastic base.
+                A uniquely designed and character-specific background card finishes the look.
+                Sized approximately 3" tall (76.2mm) 3/32" thick (2.0mm)
+                All FiGPiNs include a laser engraved, alphanumeric serial number on the back, making every single one
+                uniquely yours.
+              </p>
+
+            </div>
+          </div>
+        </div>
+        <div class="col mb-4">
+          <div class="card">
+            <img src="chuckysoda.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Chucky Slasher <em>$12.00</em></h5>
+              <p class="card-text">Funko Vinyl Soda<div></div>
+
+                Chucky
+                <div></div>
+
+                Possibility of Chase Variant* <div></div>
+
+                *Chase variants shipped at random. No guarantee of receiving chase with purchase. All sales final; no
+                returns or exchanges.
+                <div></div>
+                Chucky Collectibles <div></div>
+
+                Limited Edition: 15000 PCS </p>
+
+            </div>
+          </div>
+        </div>
       </div>
-      <div class="card-columns">
-        <div class="card">
-          <img src="chuckysoda.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title that wraps to a new line</h5>
-            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-          </div>
-        </div>
-        <div class="card p-3">
-          <blockquote class="blockquote mb-0 card-body">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <div class="card">
-          <img src="sulley.jpg" class="card-img-top" alt="...">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card bg-primary text-white text-center p-3">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat.</p>
-            <footer class="blockquote-footer text-white">
-              <small>
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <div class="card text-center">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This card has a regular title and short paragraphy of text below it.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-        <div class="card">
-          <img src="vinylsoda.jpg" class="card-img-top" alt="...">
-        </div>
-        <div class="card p-3 text-right">
-          <blockquote class="blockquote mb-0">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer posuere erat a ante.</p>
-            <footer class="blockquote-footer">
-              <small class="text-muted">
-                Someone famous in <cite title="Source Title">Source Title</cite>
-              </small>
-            </footer>
-          </blockquote>
-        </div>
-        <div class="card">
-          <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">This is another card with title and supporting text below. This card has some additional content to make it slightly taller overall.</p>
-            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-          </div>
-        </div>
-      </div>
-</main>
-<footer></footer>
+    </div>
+
+  </main>
+  <footer>
+    <footer class="social">
+      <i class="fab fa-facebook-square fa-2x"></i>
+      <i class="fab fa-instagram-square fa-2x"></i>
+      <i class="fab fa-twitter fa-2x"></i>
+    </footer>
+
+  </footer>
   <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="script.js"></script>
-<script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+  <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
