--- a/week6midterm/page4.html
+++ b/week6midterm/page4.html
@@ -1,69 +1,94 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="main.css">
-    <title>Poptop</title>
-  </head>
-  <body>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <link rel="stylesheet" href="main.css">
+  <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&family=Work+Sans&display=swap" rel="stylesheet">
+  <title>Poptop</title>
+</head>
+
+<body>
 
 
-<header>
-  <nav class="navbar navbar-expand-lg navbar-light bg-primary">
-    <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav nav-tabs mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="index.html">Home</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page2.html">About</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page3.html">Products</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="page4.html">Team<span class="sr-only">(current)</span></a>
-        </li>
-      </ul>
-    </div>
-      </nav>
-</header>
-<main>
-<p>
-  <h3>About us</h3>
-  
-  Poptop is a small business started by collectors for collectors. Here at Poptop we know how to provide our customers with the best service. We have over five years of online retail experience and on top of that we are collectors ourselves. We started selling Pops on Amazon, eBay, and other major online marketplaces about a year ago. As collectors we didn't like the prices some items had to be sold at in order to cover fees and other expenses on the major marketplaces. We decided to start our own website to provide other collectors better more competitive prices than we previously could.
-  </p>
-<h3>Contact us</h3>
-<form>
-  <div class="form-group form-row">
-    <div class="col-7">
-    <label for="exampleInputEmail1">Email address</label>
-    <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-    <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
-  </div>
- </div>
+  <header>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+      <a class="navbar-brand" href="#"> <img src="poptoplogo.jpg" alt="poptop logo" width="40" height="40"></li></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-  <button type="submit" class="btn btn-primary">Submit</button>
-</form>
-</main>
-<footer></footer>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav nav-tabs mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page2.html">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page3.html">Products</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="page4.html">Team<span class="sr-only">(current)</span></a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+  </header>
+  <main>
+    <h3 class="welcome">Team</h3>
+    <p class="aboutus">
+      Poptop is a small business started by collectors for collectors. Here at Poptop we know how to provide our
+      customers with the best service. We have over five years of online retail experience and on top of that we are
+      collectors ourselves. We started selling Pops on Amazon, eBay, and other major online marketplaces about a year
+      ago. As collectors we didn't like the prices some items had to be sold at in order to cover fees and other
+      expenses on the major marketplaces. We decided to start our own website to provide other collectors better more
+      competitive prices than we previously could.
+    </p>
+    <h3 class="welcome">Contact us</h3>
+    <form class="formcontact">
+
+      <div class="form-group form-row center-block">
+        <div class="col-4"></div>
+        <div class="col-4">
+          <label for="exampleInputEmail1">Email address</label>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+        </div>
+      </div>
+
+      <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+  </main>
+  <footer>
+    <footer class="social">
+      <i class="fab fa-facebook-square fa-2x"></i>
+      <i class="fa bfa-instagram-square fa-2x"></i>
+      <i class="fab fa-twitter fa-2x"></i>
+    </footer>
+
+  </footer>
   <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
-<script src="script.js"></script>
-<script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+    integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+    integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+  </script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+    integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous">
+  </script>
+  <script src="script.js"></script>
+  <script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
