--- a/week6midterm/page2.html
+++ b/week6midterm/page2.html
@@ -47,13 +47,16 @@
   <main>
     <div class="jumbotron jumbotron-fluid">
       <div class="container">
-        <h1 class="display-4">Welcome to Poptop Products</h1>
-        <p class="lead">Let's make it rain. Offering you the best service at half the price.</p>
+        <h1 class="display-4 pl-2">Welcome to Poptop Products</h1>
+        <p class="lead pl-2">Let's make it rain. Offering you the best service at half the price.</p>
       </div>
     </div>
     <section class="container">
       <!-- START THE FEATURETTES -->
-
+<p class="aboutus">We started selling Pops on Amazon, eBay, and other major online marketplaces about a year
+  ago. As collectors we didn't like the prices some items had to be sold at in order to cover fees and other
+  expenses on the major marketplaces. We decided to start our own website to provide other collectors better more
+  competitive prices than we previously could.  <strong>- <i> Simon, CEO.</i></Strong></p>
       <hr class="featurette-divider my-5">
 
       <div class="row featurette">
@@ -119,14 +122,16 @@
 
       <!-- /END THE FEATURETTES -->
   </main>
-  <footer>
+  
     <footer class="social">
+      <span><p> Check us out on social!</p></span>
       <i class="fab fa-facebook-square fa-2x"></i>
       <i class="fab fa-instagram-square fa-2x"></i>
       <i class="fab fa-twitter fa-2x"></i>
+      <span><p>&copy; 2020 PopTop Products, Inc.</p></span>
     </footer>
 
-  </footer>
+  
   <!-- Optional JavaScript -->
   <!-- jQuery first, then Popper.js, then Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
