--- a/weekbrief/productpreview1.html
+++ b/weekbrief/productpreview1.html
@@ -11,9 +11,10 @@
     integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
   <link href="main.css" rel="stylesheet">
+
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Raleway&display=swap" rel="stylesheet">
 
-  <title>MusicGlee</title>
+  <title>Brief</title>
 </head>
 
 <body>
@@ -21,16 +22,17 @@
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
 
-      <a class="navbar-brand"><img src="gleeclublogo.png" alt="gleemusic logo" width="80" height="80"></a>
+      <a class="navbar-brand" href="index.html"><img src="gleeclublogo.png" alt="gleemusic logo" width="80"
+          height="80"></a>
 
 
 
       <div class="collapse navbar-collapse px-5" id="navbarSupportedContent">
         <ul class="navbar-nav mx-auto text-center">
-          <li class="nav-item active">
+          <li class="nav-item">
             <a class="nav-link px-5" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
-          <li class="nav-item dropdown">
+          <li class="nav-item dropdown active">
             <a class="nav-link px-5 dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
               aria-haspopup="true" aria-expanded="false">
               Products</a>
@@ -75,77 +77,64 @@
   </header>
   <main>
 
-
-
-
-    <div class="jumbotron jumbotron-fluid">
-      <div class="container text-center">
-
-        <h1 class="display-4 p-2">Welcome to MusicGlee</h1>
-        <p class="lead p-2">We provide the best electric instruments in the land.</p>
-      </div>
-    </div>
-
-
-    <div class="container mt-5 text-center">
+    <div class="container mb-5">
       <div class="row">
-        <div class="col-lg-12">
-
-
-          <h3 class="aboutus">About Us</h3>
-        </div>
-        <div class="col-lg-2">
-        </div>
-        <div class="col-lg-8 mt-3">
-          <p class="founder text-left">Our founder started this company in 1947 barely a fiddle to his name. Today he
-            has passed the torch on to his family to provide top quality gear at affordable prices.</p>
-        </div>
-        <div class="col-lg-2">
-        </div>
-        <div class="col-lg-12 mt-3">
-          <img src="Paulhistory bass.jpg" class="img-fluid w-100 lespaul" alt="founder picture"> <a
-            class="nav-link read" href="about.html">Read our story...</a>
-          </a>
-
-
+        <div class="col mt-5 text-center">
+          <h3>Keyboard Product Details</h3>
         </div>
       </div>
     </div>
 
-    <div class="container">
+    <div class="container mt-5">
 
       <div class="row">
-        <div class="col-lg-12 mt-5 text-center">
-          <h3 class="products">Products</h3>
+        <div class="col col-12 col-lg-6 mb-4">
+
+
+          <div style="background-image:url(Fantom-6-large.jpg); background-position: center;
+                background-repeat: no-repeat;
+                background-size: 100%;height: 150px;
+              ;">
+          </div>
+        </div>
+
+        <div class="col col-lg-6">
+          <p class="keys">The Roland Fantom 6 </p>
+          <span>
+            <p class="keys">Music Workstation Keyboard is made for rapid production and expressive performance.
+              Inspiring onboard tools deep computer integration fuel an experience that feels intuitive, natural, full
+              of possibilities. expandable sound engine delivers Roland's best electronic acoustic sounds, with the
+              depth control to combine shape them in exciting new ways.</p>
+          </span>
+          <span>
+            <p class="keys">Connectivity: USB</p>
+          </span>
+          <span>
+            <p class="keys">Display: LCD</p>
+          </span>
+          <span>
+            <p class="keys">Features: MIDI Compatible, Recording, Touch Sensitive, Weighted Key, With Pedals</p>
+          </span>
+          <span>
+            <p class="keys">Number of Keys: 61 Key</p>
+          </span>
+          <span><strong>
+              <p class="keys">Price: $3300.00</p>
+            </strong></span>
+          <div class="buynow">
+
+            <button class="btn btn-primary" id="btn-now" input type="button">Add to Cart</button>
+          </div>
         </div>
       </div>
       <div class="row">
-        <div class="col-md-4 col-lg-4 text-center mt-5">
-
-          <h4>Keyboards</h4>
-          <a class="nav-link orange" href="products1.html" alt="akai keyboard">
-            <div class="orange mt-5"></div>
-          </a>
+        <div class="col col-lg-12 mb-4">
 
 
-
-        </div>
-        <div class="col-md-4 col-lg-4 text-center mt-5">
-          <h4>Basses</h4>
-          <a class="nav-link gretsch" href="products2.html" alt="gretsch bass">
-            <div class="gretsch mt-5"></div>
-          </a>
-
-
-        </div>
-        <div class="col-md-4 col-lg-4 text-center mt-5">
-          <h4>Drums</h4>
-          <a class="nav-link getreal" href="products3.html" alt="get real drums">
-            <div class="getreal mt-5"></div>
-          </a>
-
-
-
+          <p class="keys mt-5">Similar Featured Keyboards</p>
+          <img src="KompKA-49-large.jpg" class="img-fluid" height="150" width="150">
+          <img src="nordelectkeys.jpg" class="img-fluid" height="150" width="150">
+          <img src="akaikeys.jpg" class="img-fluid" height="150" width="150">
 
 
 
@@ -153,21 +142,8 @@
 
 
       </div>
-
     </div>
 
-    <div class="container mt-5 mb-5 text-center">
-
-      <h3>Blog</h3>
-
-      <div class="mt-3 embed-responsive embed-responsive-16by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/ondTlJEmPYA"
-          allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-          allowfullscreen></iframe>
-      </div>
-      <a class="nav-link blog read p-2" href="blog.html">Check out our blog</a>
-
-    </div>
 
 
 
@@ -198,9 +174,11 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
   </script>
-  <script src="script.js"></script>
-  <script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
 
+  <script src="script.js"></script>
+
+
+  <script src="https://kit.fontawesome.com/1af4703ecf.js" crossorigin="anonymous"></script>
   <!-- Option 2: jQuery, Popper.js, and Bootstrap JS
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
